--- a/Web_Api_Macorrati/appsettings.json
+++ b/Web_Api_Macorrati/appsettings.json
@@ -2,6 +2,14 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=Localhost;Database=ApiMacorrati;Uid=root;Pwd=244005"
   },
+  "Jwt": {
+    "Key": "pneumo#ultramicroscopicos@silico#vulcano$cociotico"
+  },
+  "TokenConfiguration": {
+    "Audience": "Douglas_Audience",
+    "Issuer": "Douglas_Issuer",
+    "ExpireHours": 2
+  }, 
   "Logging": {
     "LogLevel": {
       "Default": "Information",
