--- a/Web_Api_Macorrati/Web_Api_Macorrati.csproj
+++ b/Web_Api_Macorrati/Web_Api_Macorrati.csproj
@@ -4,6 +4,15 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\Douglas Sousa\OneDrive\Área de Trabalho\Douglas Projetos\CursoWebApiMacorrati\Web_Api_Macorrati\Web_Api_Macorrati\Web_Api_Macorrati.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="Models\NovaPasta\**" />
     <Content Remove="Models\NovaPasta\**" />
